fix interface on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ body {
 
 .page-scroll {
     width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
+    min-height: 100vh;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
     padding: 20px 0;
     box-sizing: border-box;
